# Contract-Lifecycle-Management

./: .env.dev  .gitignore  Dockerfile.jenkins  Jenkinsfile  docker-compose.yml
Contract-Lifecycle-Management.git/: config  packed-refs
Contract-Lifecycle-Management.git.bfg-report/2025-10-26/04-55-13/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
Contract-Lifecycle-Management.git/info/: refs
Contract-Lifecycle-Management.git/objects/info/: commit-graph  packs
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: contract.py  suggestions.py  test.py
backend/app/dto/: llm_clause.py  policy.py  risk.py
backend/app/models/: documentUploaded.py
backend/app/repositories/: contract.py  policy.py
backend/app/services/: __init__.py  agent.py  classifier.py  compliance_check.py  compliance_with_prompt.py  consistency_checker.py  embedding.py  extractor.py  fabric.py  llm_client.py  rule_engine.py  segmenter.py  suggestions.py  utils.py
backend/blockchain/fabric-samples/test-network/configtx/: configtx.yaml
backend/blockchain/fabric-samples/test-network/organizations/cryptogen/: crypto-config-centralbank.yaml  crypto-config-internalboard.yaml  crypto-config-nationalboard.yaml
backend/blockchain/smart-contracts/: baps.go  broadcastNotificationChaincode.go  contractRegisteryChaincode.go  fatwatoken.js
frontend/: Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: llms.txt
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/actions/: api.ts  (+3 more)
(+93 files in other folders)
