[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template"
version = "0.1.0"
description = ""
requires-python = ">=3.9,<3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "beanie>=1.23.0",
    "motor>=3.3.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "bcrypt==4.0.1",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.12.1",
    "google-generativeai>=0.8.5",
    "python-docx>=0.8.12",
    "pypdfium2>=4.30.0",
    "pillow>=11.3.0",
    "pdfminer-six>=20250506",
    "pytesseract>=0.3.13",
    "google-genai>=1.46.0",
    "miniopy-async>=1.21.2",
    "duckduckgo-search>=8.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
